--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,20 @@
+.timer{
+    background: navy;
+    width: 100%;  
+}
 
-/* 
+.count {
+    position: relative;
+    display: inline-flex; 
+    align-items: center;
+    justify-content: center;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    color: darkslateblue;
+    font-size: 60px;
+    font-weight: bold;
+    background-color: lightskyblue; 
+    margin: 6px;
+  }
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
